Update to support most recent version of Mojolicious (7.78)
Note that the use of reserved 'mojo.*' stash variables means that this
module is tied to the internal implementation details of a particular
version of Mojolicious and may break when upstream changes are made.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
-Revision history for CH-Something
+Revision history for MojoX::Plugin::Hook::BeforeRendered
 
 {{$NEXT}}
+
+0.31  2018-05-16
+  - update monkey patch to use 'mojo.timing' stash variable and support upgrade to Mojolicious 7.78
 
 0.30  2014-07-31
   - harmonise to CHGOVUK standard
